Fixed the alignment of the devices in relation to each other

--- a/themer/themes/solid/style.scss
+++ b/themer/themes/solid/style.scss
@@ -246,7 +246,7 @@
 				.iphone {
 					width: 112px;
 					height: 220px;
-					margin: 80px 0 0 0;
+					margin: 75px 0 0 0;
 					background: url(http://static.jimwhimpey.com/tumblr/solidbase/iphone.png);
 					.image {
 						width: 98px;
